--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>pet-web</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but pet-web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <link rel="icon" href="宠物.png">
+    <title>宠物托管 | 一站式服务</title>
+</head>
+<body style="padding: 0;margin: 0">
+<noscript>
+    <strong>We're sorry but pet-web doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+    }
+</style>
 </html>
